--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ html>
         <title>Welcome to Valuedrive1</title>
     </head>
     <body>
-        <h1>Welcome to Spinny1</h1>
+        <h1>Welcome to Spinny1.com</h1>
     </body>
 </html>
